# OCamlTorture

./: README.md
ParadigrimsLab/: dune-project
ParadigrimsLab/lib/: dune
ParadigrimsLab/test/: dune
first/: dune-project
first/lib/: dune
first/test/: dune
paradigrimsClass/: dune-project
paradigrimsClass/lib/: dune
paradigrimsClass/test/: dune
second/: dune-project
second/lib/: dune
second/test/: dune
